tests/rosetta/out/C/anti-primes.error
cc: exit status 1
/tmp/anti-primes.c: In function ‘main’:
/tmp/anti-primes.c:63:34: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   63 |       char *tmp2 = concat_string(line, tmp1);
      |                                  ^~~~
/tmp/anti-primes.c:7:34: note: expected ‘char *’ but argument is of type ‘const char *’
    7 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/anti-primes.c:71:23: warning: passing argument 1 of ‘slice_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   71 |   line = slice_string(line, 0, strlen(line) - 1);
      |                       ^~~~
/tmp/anti-primes.c:21:33: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *slice_string(char *s, int start, int end) {
      |                           ~~~~~~^
/tmp/anti-primes.c: At top level:
/tmp/anti-primes.c:75:5: error: redefinition of ‘main’
   75 | int main() {
      |     ^~~~
/tmp/anti-primes.c:53:5: note: previous definition of ‘main’ with type ‘int()’
   53 | int main() {
      |     ^~~~
